--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,19 @@ set -g utf8
 set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+
+# tmux < 2.1
+# set -g mode-mouse on
+# set -g mouse-resize-pane on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
+
+# tmux 2.1 update
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
 
 set -g prefix C-a
 unbind C-b
@@ -29,9 +38,28 @@ bind - split-window -v
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @tpm_plugins '                \
+        tmux-plugins/tpm                 \
+        tmux-plugins/tmux-sensible       \
+        tmux-plugins/tmux-resurrect      \
+        tmux-plugins/tmux-continuum      \
+        tmux-plugins/tmux-yank           \
+        tmux-plugins/tmux-pain-control   \
+        tmux-plugins/tmux-copycat        \
+        tmux-plugins/tmux-open           \
+        tmux-plugins/tmux-battery        \
+        tmux-plugins/tmux-cpu            \
+        caiogondim/maglev                \
+        '
 
 # Solarized
-set -g @plugin 'seebi/tmux-colors-solarized'
+        set -g @plugin 'seebi/tmux-colors-solarized'
 #set -g @colors-solarized '256'
-set -g @colors-solarized 'dark6'
+        set -g @colors-solarized 'dark6'
 #set -g @colors-solarized 'light'
+
+# Initialize TMUX plugin manager
+        run '~/.tmux/plugins/tpm/tpm'
+
+
+        set -g @plugin 'tmux-plugins/tmux-yank'
